tests/baselines/reference/arraySort.errors.txt
tests/cases/compiler/arraySort.ts(3,26): error TS2684: The 'this' context of type 'number[]' is not assignable to method's 'this' of type 'string[]'.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/arraySort.ts (1 errors) ====
    const strArr: string[] = ["a", "b", "c"].sort(); // ok
    const strArr2: string[] = ["a", "b", "c"].sort((a, b) => a.localeCompare(b)); // ok
    const numArr: number[] = [3, 2, 1].sort(); // error: missing comparator
                             ~~~~~~~~~
!!! error TS2684: The 'this' context of type 'number[]' is not assignable to method's 'this' of type 'string[]'.
!!! error TS2684:   Type 'number' is not assignable to type 'string'.
    const numArr2: number[] = [3, 2, 1].sort((a, b) => a - b); // ok
    const numArr3: number[] = [3, 2, 1].sort((a, b) => "" + a < "" + b ? -1 : "" + a > "" + b ? 1 : 0); // ok: default behavior